@@ -1,3 +1,6 @@
+[SNAPSHOT]
+ * add new API Keycloak (https://www.keycloak.org/) (thanks to https://github.com/JureZelic)
+
 [6.0.0]
  * make redirect_uri optional while Access Token requesting on OAuth 2.0 (thanks to https://github.com/computerlove)
  * switch to java 9+ (from java 7 only) for compilation. Runtime is still java 7+. Complement README with links and RFC descriptions.
